# YumeBox

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  README_CN.md  build.gradle.kts  build.sh  gradle.properties  gradlew  kernel.properties  release.keystore  settings.gradle.kts  update.json
.github/workflows/: pre-release.yml  release.yml  test.yml
CPP/: CMakeLists.txt
CPP/libs/include/: libshared_api.h  libyuanshen.h
CPP/src/: main.cpp
Go/: build_android_simple.sh  go.mod  main.go
KMP_Js/: settings.gradle.kts
KMP_Js/composeApp/: build.gradle.kts
KMP_Js/composeApp/src/jsMain/composeResources/drawable/: file.xml
KMP_Js/composeApp/src/jsMain/kotlin/plus/yumeyuka/yumeyuka/: App.kt  BgEffectDataManager.kt  Main.kt
KMP_Js/composeApp/src/jsMain/kotlin/plus/yumeyuka/yumeyuka/bridge/: KsuBridge.kt
KMP_Js/composeApp/src/jsMain/kotlin/plus/yumeyuka/yumeyuka/controller/: BgEffectDataManager.kt  GradientController.kt  SmoothGradientColorCycle.kt
KMP_Js/composeApp/src/jsMain/kotlin/plus/yumeyuka/yumeyuka/ui/: AnimatedGradientBackground.kt  AnimatedGradientVectorLogo.kt  App.kt
KMP_Js/composeApp/src/jsMain/kotlin/plus/yumeyuka/yumeyuka/utils/: ColorUtils.kt
KMP_Js/composeApp/src/jsMain/resources/: index.html  ksu-bridge.js  styles.css
Kt_Native/: build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
Kt_Native/src/nativeMain/kotlin/: Main.kt
Vue/: index.html  package.json  pnpm-lock.yaml
Vue/src/: App.vue  kernelsu.d.ts  style.css
Vue/src/components/: AnimatedGradientBackground.vue  AnimatedGradientLogo.vue  HomeScreen.vue
Vue/src/utils/: BgEffectDataManager.ts  ColorUtils.ts  useGradientController.ts
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/androidMain/: AndroidManifest.xml
app/src/androidMain/kotlin/plus/yumeyuka/yumebox/: App.kt  MainActivity.kt
app/src/androidMain/kotlin/plus/yumeyuka/yumebox/clash/cache/: GlobalDelayCache.kt
app/src/androidMain/kotlin/plus/yumeyuka/yumebox/clash/config/: ClashConfiguration.kt  VpnRouteConfig.kt
app/src/androidMain/kotlin/plus/yumeyuka/yumebox/clash/loader/: ConfigAutoLoader.kt
app/src/androidMain/kotlin/plus/yumeyuka/yumebox/common/: AppConstants.kt
app/src/androidMain/kotlin/plus/yumeyuka/yumebox/common/util/: Link.kt  (+13 more)
app/src/androidMain/kotlin/plus/yumeyuka/yumebox/di/: AppModule.kt
app/src/androidMain/kotlin/plus/yumeyuka/yumebox/service/: AutoRestartService.kt  BroadcastReceiver.kt  ClashHttpService.kt  ClashVpnService.kt  DialerLaunchService.kt  LogRecordService.kt  NetworkServiceManager.kt  ProxyTileService.kt
app/src/androidMain/kotlin/plus/yumeyuka/yumebox/substore/: CaseEngine.kt  NetworkUtil.kt  Request.kt  Response.kt  SubStorePaths.kt  SubStoreService.kt
app/src/androidMain/res/drawable/: ic_logo_service.xml
app/src/androidMain/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/androidMain/res/values/: colors.xml  strings.xml
app/src/androidMain/res/xml/: file_paths.xml
app/src/androidMain/resources/: aboutlibraries.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/clash/: BaseActivity.kt  MainActivity.kt  MainApplication.kt  NewProfileActivity.kt
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/core/: ConfigProvider.kt
build-logic/convention/src/main/kotlin/plugins/: BaseAndroidPlugin.kt  GolangConfigPlugin.kt  GolangModel.kt  GolangTasksPlugin.kt
core/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
core/src/cpp/: CMakeLists.txt  bridge_helper.c  bridge_helper.h  jni_helper.c  jni_helper.h  main.c  version.h  version.h.in
core/src/foss/golang/: go.mod  go.sum
core/src/golang/: go.mod  go.sum
core/src/golang/native/: bridge.c  bridge.h  main.go  trace.c  trace.h
core/src/golang/native/config/: fetch.go
core/src/kotlin/plus/yumeyuka/yumebox/core/: Clash.kt  Global.kt
core/src/kotlin/plus/yumeyuka/yumebox/core/bridge/: Bridge.kt  ClashException.kt  Content.kt  FetchCallback.kt  LogcatInterface.kt  TunInterface.kt
core/src/kotlin/plus/yumeyuka/yumebox/core/model/: ConfigurationOverride.kt  FetchStatus.kt  LogMessage.kt  Provider.kt  ProviderList.kt  Proxy.kt  ProxyGroup.kt  ProxySort.kt  Traffic.kt  TunnelState.kt  UiConfiguration.kt
core/src/kotlin/plus/yumeyuka/yumebox/core/util/: Log.kt  Net.kt  NetworkInterfaces.kt  Parcelable.kt  Parcelizer.kt  Serializers.kt  Traffic.kt
core/src/main/cpp/: CMakeLists.txt
core/src/main/golang/: go.mod  go.sum
design/: build.gradle.kts
design/lang/ru/: Common.fvv
design/lang/ru/Pages/: About.fvv  AccessControl.fvv  ApkBroken.fvv  AppCrashed.fvv  AppSettings.fvv  Files.fvv  Help.fvv  KeyValueEditor.fvv  ListEditor.fvv  Logcat.fvv  Logs.fvv  MetaFeatureSettings.fvv  NetworkSettings.fvv  NewProfile.fvv  OverrideSettings.fvv  Profiles.fvv  Properties.fvv  Providers.fvv  Proxy.fvv  Settings.fvv
docs/: README_ZH.md
extension/: build.gradle.kts  proguard-rules.pro
extension/src/androidMain/: AndroidManifest.xml
extension/src/androidMain/kotlin/plus/yumeyuka/yumebox/extension/: ExtensionActivity.kt
extension/src/androidMain/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lang/en/: About.fvv  AccessControl.fvv  AppSettings.fvv  Component.fvv  Contributor.fvv  Feature.fvv  Home.fvv  Log.fvv  MetaFeature.fvv  NetworkSettings.fvv  OpenSourceLicenses.fvv  Override.fvv  ProfilesPage.fvv  ProfilesVM.fvv  Providers.fvv  Proxy.fvv  Service.fvv  Settings.fvv  TrafficStatistics.fvv  Util.fvv
lang/zh/: About.fvv  AccessControl.fvv  AppSettings.fvv  Component.fvv  Contributor.fvv  Feature.fvv  Home.fvv  Log.fvv  MetaFeature.fvv  NetworkSettings.fvv  OpenSourceLicenses.fvv  Override.fvv  ProfilesPage.fvv  ProfilesVM.fvv  Providers.fvv  Proxy.fvv  Service.fvv  Settings.fvv  TrafficStatistics.fvv  Util.fvv
scripts/: sync-kernel.sh
src/: YuanShen  action.sh  customize.sh  module.prop  service.sh  uninstall.sh
src/webroot/: index.html
src/webroot/assets/: index-DboRIEBR.js  index-gEKK_jkq.css
(+166 files in other folders)
